--- a/Software/DDSVCO_v3/DDSVCO_v3/DDSVCO_v3/AD9833FunctionGenerator/Debug/Makefile
+++ b/Software/DDSVCO_v3/DDSVCO_v3/DDSVCO_v3/AD9833FunctionGenerator/Debug/Makefile
@@ -67,7 +67,7 @@ ADDITIONAL_DEPENDENCIES:=
 OUTPUT_FILE_DEP:= ./makedep.mk
 
 LIB_DEP+=  \
-H:/Workspace/ElectronicsProjects/TestAndMeasurement/AD9833FunctionGenerator/Software/DDSVCO_v3/DDSVCO_v3/DDSVCO_v3/ArduinoCore/Debug/libArduinoCore.a
+H:/Workspace/ElectronicsProjects/TestAndMeasurement/AD9833FunctionGenerator/AD9833FunctionGenerator/Software/DDSVCO_v3/DDSVCO_v3/DDSVCO_v3/ArduinoCore/Debug/libArduinoCore.a
 
 LINKER_SCRIPT_DEP+= 
 
@@ -106,7 +106,7 @@ all: $(OUTPUT_FILE_PATH) $(ADDITIONAL_DEPENDENCIES)
 $(OUTPUT_FILE_PATH): $(OBJS) $(USER_OBJS) $(OUTPUT_FILE_DEP) $(LIB_DEP) $(LINKER_SCRIPT_DEP)
 	@echo Building target: $@
 	@echo Invoking: AVR8/GNU Linker : 5.4.0
-	$(QUOTE)H:\Programs\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-g++.exe$(QUOTE) -o$(OUTPUT_FILE_PATH_AS_ARGS) $(OBJS_AS_ARGS) $(USER_OBJS) $(LIBS) -Wl,-Map="AD9833FunctionGenerator.map" -Wl,--start-group -Wl,-lm -Wl,-lArduinoCore  -Wl,--end-group -Wl,-L"H:\WORKSP~1\ElectronicsProjects\TestAndMeasurement\AD9833~1\Software\DDSVCO_v3\DDSVCO~1\DDSVCO~1\ARDUIN~1\Debug"  -Wl,--gc-sections -mmcu=atmega328p -B "H:\Programs\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\1.2.272\gcc\dev\atmega328p" -Os  
+	$(QUOTE)H:\Programs\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-g++.exe$(QUOTE) -o$(OUTPUT_FILE_PATH_AS_ARGS) $(OBJS_AS_ARGS) $(USER_OBJS) $(LIBS) -Wl,-Map="AD9833FunctionGenerator.map" -Wl,--start-group -Wl,-lm -Wl,-lArduinoCore  -Wl,--end-group -Wl,-L"H:\WORKSP~1\ElectronicsProjects\TestAndMeasurement\AD9833~1\AD9833~1\Software\DDSVCO~1\DDSVCO~1\DDSVCO~1\ARDUIN~1\Debug"  -Wl,--gc-sections -mmcu=atmega328p -B "H:\Programs\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\1.2.272\gcc\dev\atmega328p" -Os  
 	@echo Finished building target: $@
 	"H:\Programs\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-objcopy.exe" -O ihex -R .eeprom -R .fuse -R .lock -R .signature -R .user_signatures  "AD9833FunctionGenerator.elf" "AD9833FunctionGenerator.hex"
 	"H:\Programs\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-objcopy.exe" -j .eeprom  --set-section-flags=.eeprom=alloc,load --change-section-lma .eeprom=0  --no-change-warnings -O ihex "AD9833FunctionGenerator.elf" "AD9833FunctionGenerator.eep" || exit 0
